# dMRSI

./: .gitignore  README.md  README_dMRI.md  README_dMRS.md  Step5_get_estimates_bkp.py  atlas_functions.py  auxiliar_modelling.py  bvecs_fake.txt  custom_functions.py  dMRI_processing.md  pyproject.toml  scratch.ipynb
analysis_dwi/: Bvals_stdVsrandom_order.py  Create_bvecs_multishell.py  MPPCA_Vs_tPMPCA.py  MPPCA_Vs_tPMPCA_4D_5D.py  MPPCA_Vs_tPMPCA_new.py  STE_LTE.py  STE_vs_LTE.py
common/: STE_bvalsEff.txt  STE_bvalsNom.txt  STE_bvecs_fake.txt  ScanList_example.xlsx  b02b0_organoids.cnf  mrs_dyn_config.py  mrs_dyn_config_cylinder.py  mrs_dyn_config_multi.py  mrs_dyn_models.py  mycnf_fmri.cnf
misc_jupyter_notebooks/: create_noisy_mrs_data.ipynb  evaluate_dmrs_fits.ipynb  implement_random_cylinder_model.ipynb  lcmodel_vs_fslmrs.ipynb  prototype_bruker_import-BAK.ipynb  prototype_bruker_import.ipynb  report.html  report_ref_av.html  report_ref_av_even.html  report_ref_av_odd.html  scratch.ipynb
processing_dmrs/: Main.py  Step0_convert_Mat2Python (copy 1).py  Step0_convert_Mat2Python.py  Step0_convert_brukerraw2niimrs.py  Step1_Fitting.py  Step1_preproc.py  Step1_preproc_matlab.py  Step2_fitting.py  TestTMPPCA_multipleshell.m  aux_converter_matlab2python.py  aux_converter_python2matlab.py  dMRSI_denoise.m  dmrsdata.py  dmrsmodel.py  mrs_plots.py  processing_dmrs_matlab.asv  processing_dmrs_matlab.m  script_for_Pauline_MB.m
processing_dwi/: Hellooo.sty  Main.py  Main_human.py  Main_organoids.py  Main_rat.py  RodentSkullStripping.py  Step1_fill_study_excel.py  (+20 more)
(+107 files in other folders)
