[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dmri_dmrs_toolbox"
version = "0.1.0"
description = "dMRI and dMRS processing toolbox"
authors = [{name = "Rita Oliveira"}]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
